[gd_scene load_steps=11 format=2]

[ext_resource path="res://Art/wall04.png" type="Texture" id=1]
[ext_resource path="res://Art/wall03.png" type="Texture" id=2]
[ext_resource path="res://Art/player.png" type="Texture" id=3]
[ext_resource path="res://Art/wall02.png" type="Texture" id=4]
[ext_resource path="res://Art/wall01.png" type="Texture" id=5]
[ext_resource path="res://Game.gd" type="Script" id=6]
[ext_resource path="res://WorldGenerator.gd" type="Script" id=7]
[ext_resource path="res://Player.gd" type="Script" id=8]
[ext_resource path="res://Objects/Exit.tscn" type="PackedScene" id=9]

[sub_resource type="TileSet" id=1]
0/name = "wall01.png 0"
0/texture = ExtResource( 5 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 16, 16 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape_one_way = false
0/shape_one_way_margin = 0.0
0/shapes = [  ]
0/z_index = 0
1/name = "wall02.png 1"
1/texture = ExtResource( 4 )
1/tex_offset = Vector2( 0, 0 )
1/modulate = Color( 1, 1, 1, 1 )
1/region = Rect2( 0, 0, 16, 16 )
1/tile_mode = 0
1/occluder_offset = Vector2( 0, 0 )
1/navigation_offset = Vector2( 0, 0 )
1/shape_offset = Vector2( 0, 0 )
1/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
1/shape_one_way = false
1/shape_one_way_margin = 0.0
1/shapes = [  ]
1/z_index = 0
2/name = "wall03.png 2"
2/texture = ExtResource( 2 )
2/tex_offset = Vector2( 0, 0 )
2/modulate = Color( 1, 1, 1, 1 )
2/region = Rect2( 0, 0, 16, 16 )
2/tile_mode = 0
2/occluder_offset = Vector2( 0, 0 )
2/navigation_offset = Vector2( 0, 0 )
2/shape_offset = Vector2( 0, 0 )
2/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
2/shape_one_way = false
2/shape_one_way_margin = 0.0
2/shapes = [  ]
2/z_index = 0
3/name = "wall04.png 3"
3/texture = ExtResource( 1 )
3/tex_offset = Vector2( 0, 0 )
3/modulate = Color( 1, 1, 1, 1 )
3/region = Rect2( 0, 0, 16, 16 )
3/tile_mode = 0
3/occluder_offset = Vector2( 0, 0 )
3/navigation_offset = Vector2( 0, 0 )
3/shape_offset = Vector2( 0, 0 )
3/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
3/shape_one_way = false
3/shape_one_way_margin = 0.0
3/shapes = [  ]
3/z_index = 0

[node name="Game" type="Node2D"]
script = ExtResource( 6 )

[node name="TileMap" type="TileMap" parent="."]
tile_set = SubResource( 1 )
cell_size = Vector2( 16, 16 )
cell_custom_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
format = 1

[node name="Player" type="Sprite" parent="."]
position = Vector2( 144, 80 )
texture = ExtResource( 3 )
centered = false
script = ExtResource( 8 )

[node name="Camera2D" type="Camera2D" parent="Player"]
position = Vector2( 8, 8 )
current = true
drag_margin_left = 0.0
drag_margin_top = 0.0
drag_margin_right = 0.0
drag_margin_bottom = 0.0

[node name="WorldGenerator" type="Node2D" parent="."]
script = ExtResource( 7 )

[node name="Exit" parent="." instance=ExtResource( 9 )]

[node name="CanvasLayer" type="CanvasLayer" parent="."]
offset = Vector2( 8, 12 )
transform = Transform2D( 1, 0, 0, 1, 8, 12 )

[node name="ColorRect" type="ColorRect" parent="CanvasLayer"]
margin_left = -8.0
margin_top = -12.0
margin_right = 632.0
margin_bottom = 28.0
color = Color( 0.14902, 0.14902, 0.14902, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HealthLabel" type="Label" parent="CanvasLayer"]
margin_left = 8.0
margin_top = -12.0
margin_right = 104.0
margin_bottom = 28.0
text = "Health:"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="WeaponLabel" type="Label" parent="CanvasLayer"]
margin_left = 392.0
margin_top = -12.0
margin_right = 488.0
margin_bottom = 28.0
text = "Weapon:"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="KeysLabel" type="Label" parent="CanvasLayer"]
margin_left = 264.0
margin_top = -12.0
margin_right = 360.0
margin_bottom = 28.0
text = "Keys:"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LevelLabel" type="Label" parent="CanvasLayer"]
margin_left = 520.0
margin_top = -12.0
margin_right = 616.0
margin_bottom = 28.0
text = "Level:"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}
